server-web-next/feat: add item shop
